--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="style.css">
 	<script src="http://code.jquery.com/jquery.min.js"></script>
 	<script type="text/javascript" src="app.js"></script>
 <!-- 	<script language="JavaScript"></script>
@@ -8,13 +9,15 @@
 	<title>FizzBuzz</title>
 </head>
 <body>
-	<h1>Choose a Number</h1>
-	
-	<input type="text" id="myNumber" placeholder="# 0-100" />
-	<input type="button" id="enterButton" value="Enter" />
-	
+	<container class="contents">
+		<h1>Welcome to Fizz Buzz! A Number Game</h1>
+		<h2 class="title">Choose a Number</h2>
+		<div class="input-content">
+		<input type="text" id="myNumber" placeholder="# 0-100" />
+		<input type="button" id="enterButton" value="Enter" />
+		</div>
 
-	<div id="display"></div>
-	
+		<div id="display"></div>
+	</container>
 </body>
 </html>
